--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -11,11 +11,16 @@
     "prettify": "npx prettier . --write"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.2",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "require": "^2.4.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
