--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.2",
